static/main.css
@font-face {
    font-family: Roboto;
    src: url(Roboto-Light.ttf);
}
@font-face {
    font-family: Inconsolata;
    src: url(Inconsolata-Regular.ttf);
}
@media (orientation: landscape) {
    body {
        background-image:url('/images/background.jpg');
        background-size:cover;
        background-repeat:no-repeat;
    }
}

@media (orientation: portrait) {
    body {
        background-image: url('/images/mob-background.png');
        background-size: cover;
    }
}

a {
    text-decoration: none;
}
code {
    margin: 10px;
    padding: 15px;
    display: block;
    background-color: rgba(0, 0, 0, 0.8);
    color: lightblue;
    white-space: pre;
    font-family: Inconsolata;
}
.back-to-home {
    position: fixed !important;
    top: 5%;
    right: 5%;
}

